--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ h3 {
     margin-top: 4.3rem; }
 
 .perferendisTop {
-  margin-bottom: 5rem; }
+  margin-top: 5rem; }
 
 .perferendis__bg {
   border: 7px solid #00888d;
